--- a/sass/book-selector.scss
+++ b/sass/book-selector.scss
@@ -6,13 +6,13 @@
     color: white;
     height: 56px;
     border: none;
-    border-radius: 2px 2px 0 0;
+    border-radius: 2px 0 0 0;
 
     color: white;
     font-size: 16px;
     line-height: 19px;
     
-    box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
+    /*box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);*/
 
 
 
