--- a/sass/bootstrap-customization.scss
+++ b/sass/bootstrap-customization.scss
@@ -280,8 +280,8 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 
 /*FOcus color*/
 a:focus {
-  outline: 5px auto $colorAccent;
-  outline-offset: -2px;
+  /*outline: 2px auto $colorAccent;
+  outline-offset: -2px;*/
 }
 
 input[type="file"]:focus,
@@ -297,15 +297,15 @@ input[type="checkbox"]:focus {
 .btn.focus,
 .btn:active.focus,
 .btn.active.focus {
-  outline: 5px auto $colorAccent;
-  outline-offset: -2px;
+  /*outline: 5px auto $colorAccent;
+  outline-offset: -2px;*/
 }
 
 .form-control:focus {
-  border-color: $colorAccent;
+  border-bottom: 2px solid $colorAccent;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba($colorAccent, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba($colorAccent, 0.6);
+  /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba($colorAccent, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba($colorAccent, 0.6);*/
 }
 
 /* Loading Bar*/
