--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -2,24 +2,32 @@
 /*Light*/
 /*Dark*/
 /*does not apply to all elements*/
-/* line 7, D:/work/dat/conduit/sass/viewer.scss */
+/* line 10, D:/work/dat/conduit/sass/viewer.scss */
 .article-view {
   position: absolute;
   top: 10px;
   left: 20px;
   right: 20px;
-  bottom: 70px;
+  bottom: 10px;
   max-height: inherit;
-  overflow-y: auto;
-  overflow-x: hidden;
-  padding: 0;
+  overflow: hidden;
   border-radius: 2px;
   /*border: 1px solid $colorGrey;*/
   background: #fff;
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 25, D:/work/dat/conduit/sass/viewer.scss */
+/* line 26, D:/work/dat/conduit/sass/viewer.scss */
+#content-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 52px;
+  left: 0;
+  overflow-y: auto;
+}
+
+/* line 35, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #subject {
   color: #bdbdbd;
   font-size: 12px;
@@ -29,7 +37,7 @@
   text-align: center;
 }
 
-/* line 34, D:/work/dat/conduit/sass/viewer.scss */
+/* line 44, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -38,37 +46,37 @@
   clear: both;
 }
 
-/* line 41, D:/work/dat/conduit/sass/viewer.scss */
+/* line 51, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
-/* line 45, D:/work/dat/conduit/sass/viewer.scss */
+/* line 55, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   margin: 0 15px;
   height: 50vh;
 }
 
-/* line 50, D:/work/dat/conduit/sass/viewer.scss */
+/* line 60, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
-/* line 57, D:/work/dat/conduit/sass/viewer.scss */
+/* line 67, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 62, D:/work/dat/conduit/sass/viewer.scss */
+/* line 72, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
-/* line 67, D:/work/dat/conduit/sass/viewer.scss */
+/* line 77, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -80,7 +88,7 @@
   clear: both;
 }
 
-/* line 77, D:/work/dat/conduit/sass/viewer.scss */
+/* line 87, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -89,7 +97,7 @@
   z-index: 100;
 }
 
-/* line 84, D:/work/dat/conduit/sass/viewer.scss */
+/* line 94, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -98,7 +106,7 @@
   z-index: 100;
 }
 
-/* line 93, D:/work/dat/conduit/sass/viewer.scss */
+/* line 103, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -107,7 +115,7 @@
   margin-right: -0.25em;
 }
 
-/* line 101, D:/work/dat/conduit/sass/viewer.scss */
+/* line 111, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
   background-color: #009688;
   width: 2.5em;
@@ -123,7 +131,7 @@
   vertical-align: middle;
 }
 
-/* line 121, D:/work/dat/conduit/sass/viewer.scss */
+/* line 131, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   cursor: pointer;
   background-color: #00796b;
@@ -131,12 +139,12 @@
   transition: box-shadow .25s ease-in-out;
 }
 
-/* line 128, D:/work/dat/conduit/sass/viewer.scss */
+/* line 138, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
-/* line 132, D:/work/dat/conduit/sass/viewer.scss */
+/* line 142, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -144,21 +152,21 @@
   text-align: center;
 }
 
-/* line 139, D:/work/dat/conduit/sass/viewer.scss */
+/* line 149, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
-/* line 145, D:/work/dat/conduit/sass/viewer.scss */
+/* line 155, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px;
   position: relative;
   top: 30px;
 }
 
-/* line 151, D:/work/dat/conduit/sass/viewer.scss */
+/* line 161, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -167,40 +175,97 @@
   white-space: pre-line;
 }
 
-/* line 159, D:/work/dat/conduit/sass/viewer.scss */
+/* line 169, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 50vw;
 }
 
-/* line 164, D:/work/dat/conduit/sass/viewer.scss */
+/* line 174, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 169, D:/work/dat/conduit/sass/viewer.scss */
-.toolbox {
-  position: absolute;
-  bottom: -10px;
-  left: 20px;
-  right: 20px;
-  height: 50px;
-}
-
-/* line 176, D:/work/dat/conduit/sass/viewer.scss */
-.toolbox .container-fluid {
-  padding: 0;
-}
-
 /* line 179, D:/work/dat/conduit/sass/viewer.scss */
-.toolbox .container-fluid .navbar-info {
-  padding: 0;
+.article-view #date {
+  color: #bdbdbd;
+  font-size: 14px;
+  line-height: 18px;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
 }
 
-/* line 182, D:/work/dat/conduit/sass/viewer.scss */
-.toolbox .container-fluid .navbar-right {
-  margin-right: 0;
+/* line 190, D:/work/dat/conduit/sass/viewer.scss */
+#action-area {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 52px;
+  padding: 8px;
+  border-top: 1px solid #bdbdbd;
+  display: inline-block;
+}
+
+/* line 203, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .btn {
+  height: 36px;
+  background: transparent;
+  border: none;
+  border-radius: 2px !important;
+  float: right;
+  font-weight: 700;
+}
+
+/* line 213, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .btn-default {
+  color: #212121;
+}
+
+/* line 217, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .btn-default:hover,
+#action-area .btn-default:focus {
+  background: rgba(33, 33, 33, 0.12);
+}
+
+/* line 222, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .btn-primary {
+  color: #009688;
+}
+
+/* line 226, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .btn-primary:hover,
+#action-area .btn-primary:focus,
+#action-area .btn-primary:active,
+#action-area .btn-primary.open {
+  background: rgba(0, 150, 136, 0.12);
+  box-shadow: none;
+}
+
+/* line 234, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .dropdown-menu.open {
+  position: relative;
+  top: -350%;
+  right: 0;
+  height: auto;
+  max-height: 25vh;
+  transition: max-height .25s ease-in-out;
+  max-width: 70%;
+  background-color: #fff;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  z-index: 101;
+}
+
+/* line 249, D:/work/dat/conduit/sass/viewer.scss */
+#action-area .btn-group.open .dropdown-toggle {
+  width: 100% !important;
+  min-width: initial !important;
+  box-shadow: none;
+  background: rgba(0, 150, 136, 0.12);
 }
 
 /*# sourceMappingURL=../styles/viewer.map */
