--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -3,8 +3,8 @@ $dark: false;
 
 /*Light*/
 
-    $colorPrimary: 				#009688             !default;
-    $colorPrimary500: 				#009688             !default;
+    $colorPrimary: 				blue             !default;
+    $colorPrimary500: 			#009688             !default;
     $colorPrimary700:           rgba(0,121,107,1)   !default;
     $colorPrimaryContrast: 		#fff                !default;
             
