--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,20 +1,17 @@
 /*Layout*/
 /*Light*/
 /*Dark*/
-/* line 11, D:/work/dat/conduit/sass/layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 17, D:/work/dat/conduit/sass/layout.scss */
 html {
   font-size: 100% !important;
   font-family: 'SourceSansPro', sans-serif !important;
 }
 
-/* line 22, D:/work/dat/conduit/sass/layout.scss */
 body {
   min-width: 750px;
   /* 2x (LC fullwidth +
@@ -32,7 +29,6 @@ body {
   background-color: #f2f2f2;
 }
 
-/* line 40, D:/work/dat/conduit/sass/layout.scss */
 #container {
   position: fixed;
   padding-left: 25vw;
@@ -45,7 +41,6 @@ body {
   background: transparent;
 }
 
-/* line 50, D:/work/dat/conduit/sass/layout.scss */
 #container .column {
   position: relative;
   float: left;
@@ -53,7 +48,6 @@ body {
   background: inherit;
 }
 
-/* line 57, D:/work/dat/conduit/sass/layout.scss */
 #center {
   padding: 0;
   /* CC padding */
@@ -62,7 +56,6 @@ body {
   float: left;
 }
 
-/* line 64, D:/work/dat/conduit/sass/layout.scss */
 #left {
   width: 25vw;
   /* LC width */
@@ -76,7 +69,6 @@ body {
   display: inline-block;
 }
 
-/* line 75, D:/work/dat/conduit/sass/layout.scss */
 #right {
   width: 20vw;
   /* RC width */
@@ -91,7 +83,6 @@ body {
   overflow-x: visible;
 }
 
-/* line 86, D:/work/dat/conduit/sass/layout.scss */
 #header {
   /*DISPLAY*/
   float: left;
@@ -99,7 +90,7 @@ body {
   height: 48px;
   padding: 5px;
   /*COLORS*/
-  background: #009688;
+  background: blue;
   color: #fff;
   /*FONTS*/
   font-size: 1.5em;
@@ -107,7 +98,6 @@ body {
   box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 104, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper:before {
   content: '';
   display: inline-block;
@@ -116,7 +106,6 @@ body {
   margin-right: -0.25em;
 }
 
-/* line 112, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper {
   display: inline-block;
   vertical-align: middle;
@@ -125,17 +114,13 @@ body {
   text-align: center;
 }
 
-/* line 120, D:/work/dat/conduit/sass/layout.scss */
 #header-content {
   display: inline-block;
   vertical-align: middle;
 }
 
 /*** IE Fix ***/
-/* line 126, D:/work/dat/conduit/sass/layout.scss */
 * html #left {
   left: 390px;
   /* RC fullwidth */
 }
-
-/*# sourceMappingURL=../styles/layout.map */
