--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -2,7 +2,6 @@
 /*Light*/
 /*Dark*/
 /*does not apply to all elements*/
-/* line 10, D:/work/dat/conduit/sass/viewer.scss */
 .article-view {
   position: absolute;
   top: 10px;
@@ -17,7 +16,6 @@
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 26, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper {
   position: absolute;
   top: 0;
@@ -27,7 +25,6 @@
   overflow-y: auto;
 }
 
-/* line 35, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #subject {
   color: #bdbdbd;
   font-size: 12px;
@@ -37,7 +34,6 @@
   text-align: center;
 }
 
-/* line 44, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -46,37 +42,31 @@
   clear: both;
 }
 
-/* line 51, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
-/* line 55, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   margin: 0 15px;
   height: 50vh;
 }
 
-/* line 60, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
-/* line 67, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 72, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
-/* line 77, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -88,7 +78,6 @@
   clear: both;
 }
 
-/* line 87, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -97,7 +86,6 @@
   z-index: 100;
 }
 
-/* line 94, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -106,7 +94,6 @@
   z-index: 100;
 }
 
-/* line 103, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -115,9 +102,8 @@
   margin-right: -0.25em;
 }
 
-/* line 111, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
-  background-color: #009688;
+  background-color: blue;
   width: 2.5em;
   height: 2.5em;
   border-radius: 1.25em;
@@ -131,7 +117,6 @@
   vertical-align: middle;
 }
 
-/* line 131, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   cursor: pointer;
   background-color: #00796b;
@@ -139,12 +124,10 @@
   transition: box-shadow .25s ease-in-out;
 }
 
-/* line 138, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
-/* line 142, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -152,21 +135,18 @@
   text-align: center;
 }
 
-/* line 149, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
-/* line 155, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px;
   position: relative;
   top: 30px;
 }
 
-/* line 161, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -175,19 +155,16 @@
   white-space: pre-line;
 }
 
-/* line 169, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 50vw;
 }
 
-/* line 174, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 179, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #date {
   color: #bdbdbd;
   font-size: 14px;
@@ -197,7 +174,6 @@
   bottom: 15px;
 }
 
-/* line 190, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -209,7 +185,6 @@
   display: inline-block;
 }
 
-/* line 203, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -219,32 +194,27 @@
   font-weight: 700;
 }
 
-/* line 213, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 217, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 222, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
-  color: #009688;
+  color: blue;
 }
 
-/* line 226, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
 #action-area .btn-primary.open {
-  background: rgba(0, 150, 136, 0.12);
+  background: rgba(0, 0, 255, 0.12);
   box-shadow: none;
 }
 
-/* line 234, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -260,12 +230,9 @@
   z-index: 101;
 }
 
-/* line 249, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
   box-shadow: none;
-  background: rgba(0, 150, 136, 0.12);
+  background: rgba(0, 0, 255, 0.12);
 }
-
-/*# sourceMappingURL=../styles/viewer.map */
