--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -3,7 +3,7 @@ $dark: false;
 
 /*Light*/
 
-    $colorPrimary: 				blue             !default;
+    $colorPrimary: 				#009688             !default;
     $colorPrimary500: 			#009688             !default;
     $colorPrimary700:           rgba(0,121,107,1)   !default;
     $colorPrimaryContrast: 		#fff                !default;
