--- a/styles/layout.css
+++ b/styles/layout.css
@@ -90,7 +90,7 @@ body {
   height: 48px;
   padding: 5px;
   /*COLORS*/
-  background: blue;
+  background: #009688;
   color: #fff;
   /*FONTS*/
   font-size: 1.5em;
