--- a/styles/stream.css
+++ b/styles/stream.css
@@ -48,12 +48,12 @@
   border: none;
   border-radius: 2px 2px 0 0;
   box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
-  background-color: blue;
+  background-color: #009688;
 }
 
 .stream-action .btn-primary {
   border: none;
-  border-bottom: 2px solid blue;
+  border-bottom: 2px solid #009688;
   color: rgba(255, 255, 255, 0.7);
   border-radius: none;
   box-shadow: none;
@@ -73,7 +73,7 @@
 .stream-action .btn-primary.active:focus,
 .stream-action .btn-primary:active:hover,
 .stream-action .btn-primary.active:hover {
-  background-color: blue;
+  background-color: #009688;
   border-bottom: 2px solid #ff5252;
   box-shadow: none;
 }
@@ -122,7 +122,7 @@
 
 #book-action-wrapper .btn-primary {
   border: none;
-  border-bottom: 2px solid blue;
+  border-bottom: 2px solid #009688;
   box-shadow: none;
 }
 
@@ -135,7 +135,7 @@
 #book-action-wrapper .btn-primary.active:focus,
 #book-action-wrapper .btn-primary:active:hover,
 #book-action-wrapper .btn-primary.active:hover {
-  background-color: blue;
+  background-color: #009688;
   border-bottom: 2px solid #ff5252;
   box-shadow: none;
 }
@@ -147,7 +147,7 @@
   height: 100%;
   width: auto;
   border-radius: 2px 0 0 0;
-  border-bottom: 2px solid blue;
+  border-bottom: 2px solid #009688;
   box-shadow: none;
 }
 
@@ -160,7 +160,7 @@
 #book-action-wrapper nya-bs-select.active:focus,
 #book-action-wrapper nya-bs-select:active:hover,
 #book-action-wrapper nya-bs-select.active:hover {
-  background-color: blue;
+  background-color: #009688;
   border-bottom: 2px solid #ff5252;
   box-shadow: none;
 }
